--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,40 @@
-.App {
-  text-align: center;
+* {
+    padding: auto;
+    margin: 0 auto;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.bg-dark-green {
+    background:#0C9E0B;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.bg-dark-grey {
+    background:#2c3e50;
 }
 
-.App-link {
-  color: #61dafb;
+.bg-light-grey {
+    background:#34495e;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bg-light-green {
+    background: #1AD618;
+}
+
+.page-footer ul li a {
+    color: white;
+}
+
+.menu .btn {
+    margin-bottom: 5px;
+}
+
+.logged-info {
+    float:left;
+}
+
+.logout {
+    float:right;
+}
+
+a {
+    color: #C91F12;
 }
